Created CSS Link and Page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>
 )-->
 <body>
+    <a href="./pages/CSS_Info.html" target="_blank">CSS Info</a>
     <h1>Understanding elements</h1>
     <p>When creating html we use tags to formate and create a page.</p>
     <h2>Headings</h2>
